--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
 		<div class="middleSection">
 			<table align="center">
 				<tr>
-					<td><a href="commands.html" target="_blank"><img src="commands.png" style="width: 80%" alt="commands" ></a></td>
+					<td><a href="Commands.html" target="_blank"><img src="commands.png" style="width: 80%" alt="commands" ></a></td>
 					<td><a href="calculator.html" target="_blank"><img src="calculator.png"  style="width: 80%" alt="calc"></a></td>
 					<td><a href="videos.html" target="_blank"><img src="video.png"  style="width: 80%" alt="videos"></a></td>
 					<td><a href="Chapter1.html" target="_blank"><img src="chapter1.png"  style="width: 80%" alt="chap1"></a></td>
 				</tr>
 				<tr>
-					<td><img src="chapter2.png"   style="width: 80%" alt="chap"><a href="#" target="_blank"></a></td>
-					<td><img src="chapter3.png"   style="width: 80%" alt="chap"><a href="#" target="_blank"></a></td>
-					<td><img src="chapter4.png"   style="width: 80%" alt="chap"><a href="#" target="_blank"></a></td>
+					<td><img src="Chapter2.png"   style="width: 80%" alt="chap"><a href="#" target="_blank"></a></td>
+					<td><img src="Chapter3.png"   style="width: 80%" alt="chap"><a href="#" target="_blank"></a></td>
+					<td><img src="Chapter4.png"   style="width: 80%" alt="chap"><a href="#" target="_blank"></a></td>
 					<td><img src="Chapter5.png"  style="width: 80%" alt="chap"><a href="#" target="_blank"></a></td>
 				</tr>
 				<tr>
