--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<div class="middleSection">
 			<table align="center">
 				<tr>
-					<td><a href="Commands.html" target="_blank"><img src="commands.png" style="width: 80%" alt="commands" ></a></td>
+					<td><a href="Commands.html" target="_blank"><img src="Commands.png" style="width: 80%" alt="commands" ></a></td>
 					<td><a href="calculator.html" target="_blank"><img src="calculator.png"  style="width: 80%" alt="calc"></a></td>
 					<td><a href="videos.html" target="_blank"><img src="video.png"  style="width: 80%" alt="videos"></a></td>
 					<td><a href="Chapter1.html" target="_blank"><img src="chapter1.png"  style="width: 80%" alt="chap1"></a></td>
