--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 					<td><img src="Chapter5.png"  style="width: 80%" alt="chap"><a href="#" target="_blank"></a></td>
 				</tr>
 				<tr>
-					<td><img src="chapter6.png"  style="width: 80%"  alt="chap"><a href="#" target="_blank"></a></td>
-					<td><img src="chapter7.png"  style="width: 80%"  alt="chap"><a href="#" target="_blank"></a></td>
+					<td><img src="Chapter6.png"  style="width: 80%"  alt="chap"><a href="#" target="_blank"></a></td>
+					<td><img src="Chapter7.png"  style="width: 80%"  alt="chap"><a href="#" target="_blank"></a></td>
 					<td><img src="Chapter8.png"  style="width: 80%" alt="chap"><a href="#" target="_blank"></a></td>
 					<td><img src="Chapter9.png"  style="width: 80%" alt="chap"><a href="#" target="_blank"></a></td>
 				</tr>
